updatig package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sumanmalakar.github.io/react-recipe-app",
+  "homepage": "http://sumanmalakar.github.io/reactrecipeapp",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
